--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-bumperbot_ws/build
-bumperbot_ws/devel
-bumperbot_ws/install
-bumperbot_ws/log*
-bumperbot_ws/.vscode
-bumperbot_ws/.catkin_workspace
+bumperbot/build
+bumperbot/devel
+bumperbot/install
+bumperbot/log*
+bumperbot/.vscode
+bumperbot/.catkin_workspace
 .vscode
 **/__pycache__/
 *.pyc
